--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,8 +8,13 @@ espresso-core = "3.5.1"
 lifecycle-runtime-ktx = "2.6.2"
 activity-compose = "1.7.2"
 compose-bom = "2023.03.00"
+
 # Asynchronous
 coroutines = "1.7.3"
+
+#Test
+mockkVersion = "1.13.0"
+turbineVersion = "1.0.0"
 
 [libraries]
 core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx" }
@@ -30,6 +35,11 @@ material3 = { group = "androidx.compose.material3", name = "material3" }
 # Asynchronous
 kotlinx-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "coroutines" }
 kotlinx-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "coroutines" }
+
+# Test
+mockk-android = { module = "io.mockk:mockk-android", version.ref = "mockkVersion" }
+mockk-android-agent = { module = "io.mockk:mockk-agent", version.ref = "mockkVersion" }
+turbine = { module = "app.cash.turbine:turbine", version.ref = "turbineVersion" }
 
 [plugins]
 com-android-application = { id = "com.android.application", version.ref = "agp" }
