--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,7 +13,7 @@ compose-bom = "2023.03.00"
 coroutines = "1.7.3"
 
 #Test
-mockkVersion = "1.13.0"
+mockkVersion = "1.13.8"
 turbineVersion = "1.0.0"
 
 [libraries]
@@ -38,7 +38,7 @@ kotlinx-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-t
 
 # Test
 mockk-android = { module = "io.mockk:mockk-android", version.ref = "mockkVersion" }
-mockk-android-agent = { module = "io.mockk:mockk-agent", version.ref = "mockkVersion" }
+mockk-agent = { module = "io.mockk:mockk-agent", version.ref = "mockkVersion" }
 turbine = { module = "app.cash.turbine:turbine", version.ref = "turbineVersion" }
 
 [plugins]
